# mrs_robofly_core

./: README.md
.github/workflows/: ros_build_test.yml  ros_package_build.yml
docker/: README.md  compose.yaml  record.sh
docker/ai_kit/: build_arm64.sh
docker/config/: camera.yaml  record.sh
docker/custom_package/: .gitignore  Dockerfile  build.sh  build_arm64.sh  export_image.sh
docker/drone_session/: compose.yaml  variables.env
docker/hailo_ai/: build_arm64.sh
docker/local_docker_registry/: README.md
docker/main_image/: Dockerfile  build_arm64.sh
docker/robofly_configs/: Dockerfile  build_arm64.sh
docker/shared_data/: Dockerfile  build.sh  build_arm64.sh
docker/simulation/: compose.yaml
docker/uav_configs/: Dockerfile  build_arm64.sh
docker/uav_session/: compose.yaml  variables.env
docker/user_session/: compose.yaml
docker/user_workspace/: .gitignore  Dockerfile  build_image.sh  clean_cache.sh  (+2 more)
ros_packages/mrs_robofly_core/: CMakeLists.txt  package.xml
ros_packages/mrs_robofly_core/config/: platform_config.yaml
ros_packages/mrs_robofly_core/config/open_vins/: cam_down_NR-kalibr.yaml  cam_front_NR-kalibr.yaml  estimator_config_backup.yaml  kalibr_imucam_chain.yaml  kalibr_imucam_chain_rgb.yaml
ros_packages/mrs_robofly_core/launch/: open_vins.launch  vins_republisher.launch
ros_packages/mrs_robofly_example/: CMakeLists.txt  package.xml
ros_packages/mrs_robofly_example/config/: robofly_example.yaml
ros_packages/mrs_robofly_example/launch/: robofly_example.launch
ros_packages/mrs_robofly_example/scripts/: robofly_example.py
(+143 files in other folders)
