<?xml version="1.0"?>
<package format="2">

  <name>mrs_robofly_example</name>
  <version>1.0.0</version>
  <description>Robofly example</description>

  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>
  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>mrs_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>

</package>
